# WebDevHomeWork-Last

./: main.py  pyproject.toml
static/css/: style.css
static/js/: script.js
static/word/: word.txt
templates/: index.html
